--- a/index.html
+++ b/index.html
@@ -13,15 +13,9 @@
 
 
 <div class="app">
-<div class="wrap">
-
-    <div id="select">
-
-
-
+    <div class="wrap">
+        <div id="select"></div>
     </div>
-
-</div>
 
 </div>
 
